--- a/index.html
+++ b/index.html
@@ -53,8 +53,8 @@
 <!-- The Modal -->
 <div id="myModal" class="modal">
   <span class="close">×</span>
-  <span class="next">></span>
-  <span class="prev"><</span>
+  <span class="next">>></span>
+  <span class="prev"><<</span>
   <img class="modal-content" id="img01">
   <div id="caption"></div>
 </div>
